RESOLVED FIXED184751
Fix runtime errors in simulator while playing media
https://bugs.webkit.org/show_bug.cgi?id=184751
Summary Fix runtime errors in simulator while playing media
Jer Noble
Reported 2018-04-18 13:21:01 PDT
Fix runtime errors in simulator while playing media
Attachments
Patch (4.27 KB, patch)
2018-04-18 13:22 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-04-18 13:22:26 PDT
Radar WebKit Bug Importer
Comment 2 2018-04-18 13:25:45 PDT
WebKit Commit Bot
Comment 3 2018-04-18 14:17:23 PDT
Comment on attachment 338252 [details] Patch Clearing flags on attachment: 338252 Committed r230779: <https://trac.webkit.org/changeset/230779>
WebKit Commit Bot
Comment 4 2018-04-18 14:17:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.