Fix runtime errors in simulator while playing media https://bugs.webkit.org/show_bug.cgi?id=184751

Reviewed by Eric Carlson.

AVURLAssetHTTPCookiesKey may not be present, and AVPlayer may not respond to certain methods.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVAssetForURL):
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateDisableExternalPlayback):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setShouldDisableSleep):


Canonical link: https://commits.webkit.org/200261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230779 268f45cc-cd09-0410-ab3c-d52691b4dbfc